# python_web_template

./: .dockerignore  .env.example  .env.test  .gitignore  CICD_SUMMARY.md  Dockerfile  LICENSE  Makefile  README.md  alembic.ini  docker-compose.yml  main.py  nginx.conf.example  pyproject.toml  ruff.toml
.github/: CHEATSHEET.md  CICD.md  COMMANDS.md  QUICKSTART_CICD.md  SETUP.md  WORKFLOWS_DIAGRAM.md  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: cd.yml  ci.yml  codeql.yml  dependency-review.yml  docker.yml  performance.yml  pr.yml  release.yml
alembic/: env.py
scripts/: release.sh
src/application/common/: schemas.py  unit_of_work.py  value_objects.py
src/di/: database.py
src/domain/common/: entity.py  repository.py
src/infrastructure/: unit_of_work.py
src/infrastructure/config/: settings.py
src/infrastructure/database/: types.py
src/infrastructure/database/models/: base.py  mixins.py
src/infrastructure/database/repositories/: base.py  mixins.py  types.py
src/interfaces/api/: __init__.py  exception_handlers.py
tests/: test_config.py
tests/unit/: test_outbox_events.py
tests/unit/infrastructure/repositories/: test_base.py  test_mixins.py
