[project]
name = "python-web-template"
version = "0.1.0"
description = "A template for building web applications with Python."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dishka>=1.7.2",
    "fastapi>=0.128.0",
    "loguru>=0.7.3",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "sqlalchemy>=2.0.45",
    "uvicorn>=0.40.0",
]

[dependency-groups]
dev = [
    "alembic>=1.18.3",
    "pre-commit>=4.0.1",
    "ruff>=0.14.10",
]
test = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
]
